[package]
name = "hibp"
version = "0.1.0"
authors = ["Bastien de Luca <bastien@de-luca.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Check password for pwnage in HaveIBeenPwned"
homepage = "https://github.com/de-luca/rust-hibp"
repository = "https://github.com/de-luca/rust-hibp"
keywords = ["password", "web", "hibp", "haveibeenpwned"]

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros"] }
sha-1 = "0.8.1"
regex = "1.3.1"

[dev-dependencies]
mockito = "0.23"
